syntax = "proto3";
option go_package = "ProjectDS/grpc/proto";

message joinRequest {
  string client_id  = 1;
}

message publishRequest {
  string client_id = 1;
  string content = 2;
}

message leaveRequest {
  string client_id = 1;
}

message chatMessage {
  string from = 1;
  string content = 2;
  int64 logical_time = 3;
}

message ack {
  bool success = 1;
  string error = 2;
}

message empty {

}

service ITUdatabase {

  rpc Join(joinRequest) returns (stream chatMessage);

  rpc Publish(publishRequest) returns (ack);

  rpc Leave(leaveRequest) returns (ack);
}